--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "license": "ISC",
     "dependencies": {
         "@rollup/plugin-typescript": "^8.2.0",
+        "eslint": "^7.22.0",
         "js-dos": "^6.22.59",
         "purgecss": "^4.0.3",
         "rollup": "^2.42.3",
         "rollup-plugin-serve": "^1.1.0",
         "rollup-plugin-terser": "^7.0.2",
         "tslib": "^2.1.0",
+        "tslint": "^6.1.3",
         "typescript": "^4.2.3"
     }
 }
