--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "license": "ISC",
     "dependencies": {
         "@rollup/plugin-typescript": "^8.2.0",
+        "del": "^6.0.0",
         "dosbox": "^0.1.0",
         "emulators": "^0.0.60",
+        "emulators-ui": "^0.0.60",
         "eslint": "^7.22.0",
-        "js-dos": "^6.22.59",
+        "gulp": "^4.0.2",
+        "gulp-rename": "^2.0.0",
+        "js-dos": "^7.0.0-beta.r28",
+        "npm": "^7.10.0",
         "purgecss": "^4.0.3",
         "rollup": "^2.42.3",
         "rollup-plugin-serve": "^1.1.0",
