--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "gulp-rename": "^2.0.0",
         "js-dos": "^7.0.0-beta.r28",
         "npm": "^7.10.0",
+        "pixi-filters": "^4.1.2",
         "purgecss": "^4.0.3",
         "rollup": "^2.42.3",
         "rollup-plugin-serve": "^1.1.0",
